# DCL_CvBasic

src/Components/: CMakeLists.txt
src/Components/CalcObjectLocation/: CalcObjectLocation.cpp  CalcObjectLocation.hpp
src/Components/CalcStatistics/: CMakeLists.txt  CalcStatistics.cpp  CalcStatistics.hpp
src/Components/CvBRIEF/: CvBRIEF.cpp
src/Components/CvBRISK/: CvBRISK.cpp
src/Components/CvBayesClassifier/: CvBayesClassifier.cpp  CvBayesClassifier.hpp
src/Components/CvFAST/: CvFAST.cpp
src/Components/CvFindCirclesGrid/: CvFindCirclesGrid_Processor.cpp
src/Components/CvFreak/: CvFreak.cpp
src/Components/CvGaussianNoise/: CvGaussianNoise.cpp  CvGaussianNoise.hpp
src/Components/CvKAZE/: CMakeLists.txt  CvKAZE.cpp  CvKAZE.hpp
src/Components/CvMSER/: CvMSER.cpp
src/Components/CvORB/: CvORB.cpp
src/Components/CvSIFT/: CvSIFT.cpp  CvSIFT.hpp
src/Components/CvSURF/: CvSURF.cpp
src/Components/CvSolvePnP/: CvSolvePnP_Processor.cpp  CvSolvePnP_Processor.hpp
src/Components/CvStarDetector/: CvStarDetector.cpp
src/Components/CvVideoWriter/: CvVideoWriter_Sink.cpp
src/Components/Movie/: Movie_Source.cpp
src/Types/: AKAZE.hpp  CMakeLists.txt  KAZE.hpp  Line.hpp  kaze.cpp
src/Types/Circles/: Circles.hpp
src/Types/kaze/: AKAZEConfig.h  AKAZEFeatures.cpp  AKAZEFeatures.h  KAZEConfig.h  KAZEFeatures.cpp  KAZEFeatures.h  fed.cpp  nldiffusion_functions.cpp
